# automation-platform

./: .env.deploy.example  .gitignore  .pre-commit-config.yaml  BUILD_AND_TEST.eng.md  BUILD_AND_TEST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.ru.md  YAML_FILES_EXPLAINED.ru.md  docker-compose.dev-db.yml  package-lock.json  pom.xml  qodana.yaml
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
docs/: .$newdatabase.drawio.dtmp  01-ЧТО-ДОЛЖНО-БЫТЬ.md  02-ЧЕГО-НЕТ.md  03-ПЛАН-РАБОТ.md  04-ЛОГИКА-РАБОТЫ-ПОДРОБНО.md  ARCHITECTURE.md  CONTRIBUTING.md  CORE-DETAILED-LOGIC-WITH-EXAMPLES.md  DEPENDENCIES_AND_SERVICES_ANALYSIS.md  DEPLOY_LOCAL.ru.md  DEPLOY_SERVER.ru.md  INDEX.ru.md  LOGIC-FLOW-BOT-2.md  LOGIC-WORKFLOW-DETAILED.md  README.ru.md  YAML_FILES_EXPLAINED.ru.md  database.drawio  newdatabase.drawio  newdatabase.sql
local-demo/: README.local.md  run-chat-overlay-preview.sh  run-demo.sh  run-full-demo.sh
mcp-servers/: README.ru.md
platform-agent/: .gitignore  ARCHITECTURE.eng.md  ARCHITECTURE.md  README.eng.md  README.md  README.ru.md  pom.xml
platform-agent/chat-overlay/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
platform-agent/chat-overlay/src-tauri/capabilities/: default.json
platform-agent/chat-overlay/src-tauri/src/: lib.rs  main.rs
platform-api/: README.eng.md  README.md  README.ru.md  SPRING_EXPLAINED.eng.md  SPRING_EXPLAINED.ru.md  TESTING.md  pom.xml
platform-core/: README.eng.md  README.ru.md  RUN_IN_IDEA.eng.md  RUN_IN_IDEA.md  RUN_IN_IDEA.ru.md  pom.xml
platform-executor/: README.eng.md  pom.xml  (+1 more)
(+369 files in other folders)
